# neuro-nav

./: .gitignore  11851_README.md  Instructions.md  README.md  main.py  pyproject.toml  use-cuda-126.sh
conceptgraph/: scannet200_classes_colors.json
conceptgraph/dataset/: datasets_common.py  preprocess_r3d_file.py
conceptgraph/hydra_configs/: base_paths.yaml  record3d.yaml  rerun_realtime_mapping.yaml
conceptgraph/scenegraph/: build_scenegraph_cfslam.py
conceptgraph/slam/: rerun_realtime_mapping.py  utils.py
conceptgraph/utils/: general_utils.py  vis.py
