[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-nav"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "clip",
    "cmake>=4.1.0",
    "dill>=0.4.0",
    "distinctipy>=1.3.4",
    "faiss-cpu>=1.12.0",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "imageio>=2.37.0",
    "kornia>=0.8.1",
    "natsort>=8.4.0",
    "ninja>=1.13.0",
    "open-clip-torch>=3.2.0",
    "open3d>=0.19.0",
    "openai>=2.6.0",
    "pyliblzfse>=0.4.1",
    "pypng>=0.20220715.0",
    "rerun-sdk>=0.26.1",
    "supervision>=0.26.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tyro>=0.9.35",
    "ultralytics>=8.3.218",
    "wandb>=0.22.2",
    "pytorch3d @ https://github.com/aitechroberts/neuro-nav/releases/download/pytorch3d-0.7.8-cu126-neuro-nav/pytorch3d-0.7.8-cp310-cp310-linux_x86_64.whl"
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }

[tool.setuptools]
# if you have package data, we can add [tool.setuptools.package-data] later

# Tell setuptools to *find only* the conceptgraph package, and ignore others like "assets"
[tool.setuptools.packages.find]
include = ["conceptgraph*"]
exclude = ["tests*", "assets*", "docs*", "scripts*"]
